AC_INIT([biblioteka-sygnaly], [1.1], [bogdan.kreczmer@iiar.pwr.wroc.pl])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_LANG([C++])	
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
#AM_PROG_AR
AC_PROG_RANLIB
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
#AC_PROG_INSTALL
AC_OUTPUT
