lib_LIBRARIES= libSygnaly.a
libSygnaly_a_SOURCES = BlokSygnalowy.cpp \
                     ListaBlokow.cpp \
                     Sygnal.cpp

libSygnaly_a_CXXFLAGS = -I.

library_includedir=$(includedir)
library_include_HEADERS= Sygnal.hh \
              BlokSygnalowy.hh \
              ListaBlokow.hh 
