lib_LTLIBRARIES = command4move.la command4rotate.la command4turn.la
command4move_la_SOURCES = command4move.cpp command4move.hh command.hh robotpose.hh
command4move_la_LDFLAGS = -module -version-info 1:0:0
command4rotate_la_SOURCES = command4rotate.cpp command4rotate.hh command.hh robotpose.hh
command4rotate_la_LDFLAGS = -module -version-info 1:0:0
command4turn_la_SOURCES = command4turn.cpp command4turn.hh command.hh robotpose.hh
command4turn_la_LDFLAGS = -module -version-info 1:0:0